--- a/cities.html
+++ b/cities.html
@@ -22,6 +22,7 @@
   <hr/>
 
   <ol>
+    <li>chennai (24,445,234)</li>
     <li>Shanghai (17,836,133)</li>
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
